Fix pending div overflow

--- a/app/style/HomePage.less
+++ b/app/style/HomePage.less
@@ -154,7 +154,8 @@
   color: var(--stroke-color-hovered);
   font-size: 13px;
   font-family: @font-family-regular;
-  margin: 0px 0px 8px 16px;
+  margin-bottom: 8xp;
+  width: 313px;
 }
 
 .home-content-link {
